maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: expected class or object definition
def marquageComplet():Boolean = //vérifie si on a marqué toutes les cases CHECKED
^JediEscaper:34: error: expected class or object definition
def repererSortie() //repère sortie, y met 0 CHECKED
^JediEscaper:35: error: expected class or object definition
{
^JediEscaper:48: error: expected class or object definition
def repererCasesAdjacentes(X:Int,Y:Int):Array[Boolean]= //repère cases adjacentes CHECKED
^JediEscaper:81: error: expected class or object definition
def marquerCasesAdjacentes(casesAdjacentes:Array[Boolean],X:Int,Y:Int) //marque cases adjacentes
^JediEscaper:82: error: expected class or object definition
{
^JediEscaper:107: error: expected class or object definition
def allerSortie() //atteint la sortie en lisant le sol
^JediEscaper:108: error: expected class or object definition
{
^JediEscaper:155: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:156: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:157: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:158: error: Unmatched closing brace '}' ignored here
}
^